--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,13 +1,34 @@
+@use 'var';
+
 .event{
     padding: 80px 0;
-    background-image: linear-gradient(180deg, #1b6ca7, #442bdb);
+
+    &--frontend{
+        background-image: linear-gradient(180deg, var.$blue1, var.$blue2);
+    }
+    &--ui-ux{
+        background-image: linear-gradient(180deg, var.$blue2, var.$pink);
+    }
+    &--data-science{
+        background-image: linear-gradient(180deg, var.$pink, var.$yelow);
+    }
+    &--backend{
+        background-image: linear-gradient(180deg, var.$yelow, var.$pink);
+    }
+    
+    &--image-left{
+        .container{
+            flex-direction: row-reverse;
+        }
+
+    }
 
     .container{
         display: flex;
+        gap: 40px;
     }
 
     &__details{
-        margin-right: 40px;
         &__title{
             font-size: 18px;
             font-weight: bold;
