--- a/src/styles/componentes/_buttons.scss
+++ b/src/styles/componentes/_buttons.scss
@@ -1,3 +1,5 @@
+@use '../var';
+
 .button{
     padding: 12px;
     font-size: 18px;
@@ -5,8 +7,8 @@
     white-space: nowrap;
 
     &--primary{
-        color: #fff;
-        background-color: #4F2AC3;
+        color: var.$textcolor;
+        background-color: var.$buttoncolorprimary;
     }
 
     @media(max-width:640px){
