--- a/src/styles/componentes/_info_bar.scss
+++ b/src/styles/componentes/_info_bar.scss
@@ -1,3 +1,5 @@
+@use '../var';
+
 .infos-bar{
     padding: 16px 24px;
     background-color: #fff;
@@ -9,10 +11,10 @@
 
         &__item{
             font-size: 14px;
-            color: #000;
+            color: var.$secondarytextcolor;
 
             b{
-                color: #000;
+                color: var.$secondarytextcolor;
                 font-size: 18px;
                 display: block;
             }
